# uttt-nnue

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  agent.cpp  conanfile.txt  state.cpp  state.h  types.h
.devcontainer/: Dockerfile  devcontainer.json
cmake/: compiler_options.cmake  cppcheck.cmake  dependencies.cmake
project/: CMakeLists.txt
project/lib/: CMakeLists.txt
project/lib/include/: action.h  agent.h  data.h  state.h  types.h
project/lib/src/: action.cpp  agent.cpp  state.cpp
project/uttt/: CMakeLists.txt
project/uttt/src/: uttt.cpp
scripts/: build.sh
src/: agent.cpp  agent.h  globals.h
